--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Biblioteca_backend
+# Configuración de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=password123
+# Configuración de Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Configuración de servidor
+server.port=8080
